# house-price-predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  streamlit-app-dockerfile
.github/: dependabot.yml
.github/workflows/: mlops-ci-workflow.yml
configs/: model_config.yaml
data/raw/: house_data.parquet
deployment/kubernetes/: model-deploy.yaml  streamlit-deploy.yaml
notebooks/: 00_data_engineering.ipynb  01_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_experimentation.ipynb
src/api/: pyproject.toml  schemas.py
src/data/: run_processing.py
streamlit_app/: Dockerfile  app.py  pyproject.toml
