[project]
name = "house-price-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "api",
    "data",
    "fastapi==0.95.2",
    "features",
    "ipykernel==6.29.5",
    "joblib==1.3.1",
    "matplotlib==3.7.1",
    "mlflow==2.3.1",
    "models",
    "numpy==1.24.3",
    "pandas==1.5.3",
    "pytest==7.3.1",
    "pyyaml==6.0",
    "scikit-learn==1.2.2",
    "seaborn==0.12.2",
    "setuptools==65.5.0",
    "uvicorn==0.22.0",
    "xgboost==1.7.6",
]

[tool.uv.sources]
api = { workspace = true }
data = { workspace = true }
features = { workspace = true }
models = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/api",
    "packages/data",
    "packages/features",
    "packages/models",
]
