[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.95.2",
    "joblib==1.3.1",
    "numpy==1.24.3",
    "pandas==1.5.3",
    "pyyaml==6.0",
    "scikit-learn==1.2.2",
    "uvicorn==0.22.0",
    "xgboost==1.7.5",
]
